[lib]
name = "export_rust_library_to_c"
crate-type = ["staticlib", "cdylib"]

[package]
name = "export_rust_library_to_c"
version = "0.1.0"
authors = ["deepkh <deepkh@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
