[package]
name = "others"
version = "0.1.0"
authors = ["deepkh <deepkh@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libhelper = { path = "../libhelper" }
msgq = { path = "../msgq" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"

